WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131813
_webProcessIdentifier should return 0 if the web process crashed
https://bugs.webkit.org/show_bug.cgi?id=131813
Summary
_webProcessIdentifier should return 0 if the web process crashed
Pratik Solanki
Reported
2014-04-17 13:50:52 PDT
Add SPI to see if web process is live or got killed
Attachments
Patch
(1.89 KB, patch)
2014-04-17 13:52 PDT
,
Pratik Solanki
no flags
Details
Formatted Diff
Diff
Patch
(1.33 KB, patch)
2014-04-17 14:27 PDT
,
Pratik Solanki
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2014-04-17 13:52:05 PDT
Created
attachment 229572
[details]
Patch
Anders Carlsson
Comment 2
2014-04-17 13:53:48 PDT
Comment on
attachment 229572
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229572&action=review
> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:1411 > +- (BOOL)_isValid > +{ > + return _page->isValid(); > +}
I think this name is too generic. How about _hasWebProcess?
> Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:121 > +- (BOOL)_isValid;
This should be a property.
Pratik Solanki
Comment 3
2014-04-17 14:16:47 PDT
Better way - just make _webProcessIdentifier return 0 if the process was killed.
Pratik Solanki
Comment 4
2014-04-17 14:27:30 PDT
Created
attachment 229577
[details]
Patch
Pratik Solanki
Comment 5
2014-04-17 15:39:55 PDT
Committed
r167457
: <
http://trac.webkit.org/changeset/167457
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug