_webProcessIdentifier should return 0 if the web process crashed https://bugs.webkit.org/show_bug.cgi?id=131813 <rdar://problem/16650605>

Reviewed by Anders Carlsson.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _hasWebProcess]):
* UIProcess/API/Cocoa/WKWebViewPrivate.h:

Canonical link: https://commits.webkit.org/149887@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167457 268f45cc-cd09-0410-ab3c-d52691b4dbfc